#31 - Updated all text copy to remove mentions of clients and being for hire

--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -34,7 +34,7 @@ h2 About Us
     .wide-column
       h3 Our process
       p.
-        Everyone's different and so we follow an iterative approach to delivery, utilising an adaptive approach that scales according to your needs and budget.
+        Everyone's different and so we follow an iterative approach to delivery, utilising an adaptive approach that scales according to our needs and budget.
   .row.center
     .cards
       .card
@@ -51,12 +51,12 @@ h2 About Us
         img.card_image(src='/assets/images/process/stakeholder_review.jpg' alt='A digitally altered photo of an online meeting with multiple people on camera')
         h4 Stakeholder Review
         p.
-          We ensure projects stay on track to successful completion by providing you with regular progress updates, check-ins and implementing your feedback.
+          We ensure projects stay on track to successful completion by providing regular progress updates, check-ins and implementing notes and feedback.
       .card
         img.card_image(src='/assets/images/process/refinement.jpg' alt='A digitally altered photo of two people reviewing content on a laptop')
         h4 Refinement
         p.
-          As multiple cycles of iteration are completed, the functionality, usability and overall quality of your project matures until it's ready for launch.
+          As multiple cycles of iteration are completed, the functionality, usability and overall quality of the project matures until it's ready for launch.
       .card
         img.card_image(src='/assets/images/process/ongoing_support.jpg' alt='A digitally altered photo of a customer service representatives headset')
         h4 Ongoing Support
@@ -75,13 +75,13 @@ h2 About Us
       .feature_content
         h4 Illustration and photo editing software
         p
-          | Our team is most experienced with the Adobe and Affinity suites for producing designs, illustrations and editing photos. We can deliver graphics in all formats including SVG, TIFF and PDF. Assets produced in our creative tools are often for use in other projects such as website designs (pictured) or product photo editing. We can also collaborate with your existing team with online tools like Figma and Canva.
+          | Our team is most experienced with the Adobe and Affinity suites for producing designs, illustrations and editing photos. We can deliver graphics in all formats including SVG, TIFF and PDF. Assets produced in our creative tools are often for use in other projects such as website designs (pictured) or product photo editing. We can also collaborate with existing teams with online tools like Figma and Canva.
   .row.center
     .feature.wide
       .feature_content
         h4 3D Design and Rendering Software
         p
-          | The cornerstone of our capability in 3D Modelling and Rendering, Blender allows our team to access sophisticated tools for producing models, materials and 3D images. We can create custom photo realistic 3D models of  your product designs, optimised game models and create animated sequences for video ads, storytelling and interactive applications.
+          | The cornerstone of our capability in 3D Modelling and Rendering, Blender allows our team to access sophisticated tools for producing models, materials and 3D images. We can create custom photo realistic 3D models of product designs, optimised game models and create animated sequences for video ads, storytelling and interactive applications.
       .feature_media
         a(href='/assets/images/tools/blender.png' class='lightbox')
           img(src='/assets/images/tools/blender.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of Blender being used to create a 3D animation')
@@ -99,7 +99,7 @@ h2 About Us
       .feature_content
         h4 Development Operations
         p
-          | Our on premises server hosts our development environments, some of which are custom and others defined in automation tools like Ansible and Docker. Using cloud services for hosting and Github for CI/CD, version control, issue tracking and project management allows our team to work with a broad range of teams around the world. We can work within your organisations coding standards and policies or provide our own recommendations, depending on your needs.
+          | Our on premises server hosts our development environments, some of which are custom and others defined in automation tools like Ansible and Docker. Using cloud services for hosting and Github for CI/CD, version control, issue tracking and project management allows our team to work with a broad range of teams around the world. We can work within another organisations coding standards and policies or provide our own recommendations, depending on the project needs.
       .feature_media
         a(href='/assets/images/tools/vscode.png' class='lightbox')
           img(src='/assets/images/tools/vscode.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of VS Code')
@@ -111,7 +111,7 @@ h2 About Us
       .feature_content
         h4 Business Operations
         p
-          | We have a robust documentation system that ensures nothing is lost. Using Office and Dropbox our organized and structured files keep our production team equipped and informed for maximum efficiency to meet your goals.
+          | We have a robust documentation system that ensures nothing is lost. Using Office and Dropbox our organized and structured files keep our production team equipped and informed for maximum efficiency to meet project goals.
   .row.center
     .wide-column
       h3 Our values
