--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -3,13 +3,13 @@ h2 Services
   .row.center
     .wide-column
       p
-        | Open Studios has a wealth of tools, skills and unique knowledge that becomes available to you when you hire us. We founded this studio to make our dreams into reality. When you hire us, we apply the same passion to your ideas and make your dreams a reality too.
+        | Open Studios has a wealth of tools, skills and unique knowledge. We founded this studio to make our project dreams into reality. When we work with others, we apply the same passion to other peoples ideas and make their dreams a reality too.
   .row.center.hide-overflow
     .feature.wide
       .feature_content
         h3 Video commercials
         p.
-          Elevate and promote your brand with video ads. We specialize in crafting a moment within its own world, a memorable experience that will resonate with your target audience. From concept development and video production and editing, we ensure your message is delivered effectively and memorably.
+          Elevating and promoting brands with video ads. We specialize in crafting a moment within its own world, a memorable experience that will resonate with the target audience. From concept development and video production and editing, we ensure the message is delivered effectively and memorably.
       .feature_media#video_commercials
         .keen-slider.main
           .keen-slider__slide
@@ -61,13 +61,13 @@ h2 Services
       .feature_content
         h3 Animation
         p
-          | Transform your ideas into captivating visual stories. Whether it's a 2D or 3D animation, we bring concepts to life, adding movement and personality to your content. From product videos to character animations, we tailor our work to suit you.
+          | Transform ideas into captivating visual stories. Whether it's a 2D or 3D animation, we bring concepts to life, adding movement and personality to static content. From product videos to character animations, we tailor our work to ensure it's fit for purpose.
   .row.center.hide-overflow
     .feature.wide
       .feature_content
         h3 3D Modelling and product renders
         p
-          | Showcase your product in the best light with our modeling and product rendering services. Using custom 3D models and a meticulously configured rendering pipeline to get the perfect image. Whether it's a stylised look or realistic renders we ensure a visually appealing and accurate representation, perfect for marketing materials and presentations.
+          | Showcasing products in the best light with 3D models and product renders. Using custom 3D models and a meticulously configured rendering pipeline to get the perfect image. Whether it's a stylised look or realistic renders we ensure a visually appealing and accurate representation, perfect for marketing materials and presentations.
       .feature_media#modelling
         .keen-slider.main
           .keen-slider__slide
@@ -119,13 +119,13 @@ h2 Services
       .feature_content
         h3 3D Web Experiences
         p
-          | Redefine online engagement with our 3D web experiences. We have extensive experience with WebGL/Three.JS, allowing us to create immersive online environments. In these digital worlds users interact with content in three dimensions. From virtual tours to interactive product displays, we can translate your vision into an experience that works on multiple platforms including older computers and mobile.
+          | Redefining online engagement with 3D web experiences. We have extensive experience with WebGL/Three.JS, allowing us to create immersive online environments. In these digital worlds users interact with content in three dimensions. From virtual tours to interactive product displays, we can translate a concept into an experience that works on multiple platforms including older computers and mobile.
   .row.center.hide-overflow
     .feature.wide
       .feature_content
         h3 Full Stack Web Development
         p
-          | We can build static websites, eCommerce, CMS and cloud services using industry leading open source software. We handle everything from the user interface to the server-side logic, ensuring seamless functionality and a polished user experience. Our expertise spans front-end technologies, back-end development, and infrastructure, providing comprehensive solutions for your online presence.
+          | We can build static websites, eCommerce, CMS and cloud services using industry leading open source software. We handle everything from the user interface to the server-side logic, ensuring seamless functionality and a polished user experience. Our expertise spans front-end technologies, back-end development, and infrastructure, providing comprehensive solutions for online presence.
       .feature_media#fullstack
         .keen-slider.main
           .keen-slider__slide
@@ -177,14 +177,12 @@ h2 Services
       .feature_content
         h3 Game development
         p
-          | Immerse your audience in interactive worlds on the web, mobile and PC. From concept design to coding and testing, we specialize in creating unique eye catching graphics that aren't seen elsewhere. We are experienced in performance optimisation, fine tuning shaders and game engine effects to ensure the best possible look for your video game project and target platform.
+          | Immersing audiences in interactive worlds on the web, mobile and PC. From concept design to coding and testing, we specialize in creating unique eye catching graphics that aren't seen elsewhere. We are experienced in performance optimisation, fine tuning shaders and game engine effects to ensure the best possible look for a video game on the selected target platform.
   .row.center
     .wide-column
       h3 Our technical solutions
       p.
-        The platforms used by Open Studios are part of a considered ecosystem that is robust, scalable and customisable to your unique requirements. We create websites and software that run on industry leading open source frameworks and server infrastructure software.
-      p.
-        Our team is experienced with creative and technical applications across many industries and use cases. You'll be in good hands whether you're trying to make a simple brochure site, customised eCommerce store or setup a learning portal.
+        The platforms used by Open Studios are part of a considered ecosystem that is robust, scalable and customisable. We create websites and software that run on industry leading open source frameworks and server infrastructure software because we genuinely believe in free and open source software (FOSS).
   .row
     .tiles
       .tile
@@ -207,50 +205,18 @@ h2 Services
         .tile_content.horizontal
           .tile_innercontent
             h3 Matomo Analytics
-            p The leading open source alternative to Google Analytics. Our Matomo solutions are deeply customisable allowing you full control of your reporting. Compatible with Google ads, GDPR compliant and you get to own your own data for further use.
+            p The leading open source alternative to Google Analytics. Our Matomo solution is deeply customisable allowing us full control of reporting. Compatible with Google ads, GDPR compliant and we own our data for further use.
           img.tile_img(alt='Matomo Analytics logo' src='/assets/images/platforms/matomo.png')
         .tokens
           .token
             h4 GDPR Compliant
             img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
           .token
-            h4 Own your data
+            h4 Own the data
             img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
           .token
             h4 Mobile App
             img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
-      .tile
-        .tile_content.vertical
-          img.tile_img(alt='Media Wiki logo' src='/assets/images/platforms/mediawiki.png' style='filter: invert()')
-          .tile_innercontent
-            h3 Media Wiki
-            p The system powering Wikipedia. Our MediaWiki solutions are customised to your specifications and branding. Facilitating a hub to collaborate in a structured way, empowering users with advanced editing features unlocking new efficiencies within your organisation.
-        .tokens
-          .token
-            h4 Customisation
-            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
-          .token
-            h4 Integration
-            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
-          .token
-            h4 Single Sign On
-            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
-      .tile
-        .tile_content.horizontal
-          .tile_innercontent
-            h3 Moodle LMS
-            p Need a learning management system (LMS)? Our team can design a Moodle system that meets your business goals and legislative obligations. Used by higher education, major corporations and governments around the world as their main learning management system.
-          img.tile_img(alt='Moodle logo' src='/assets/images/platforms/moodle.png')
-        .tokens
-          .token
-            h4 Countries
-            h5 144
-          .token
-            h4 Plugins
-            h5 2,248
-          .token
-            h4 Users
-            h5(style='font-size: 1.5rem;margin: 0.6rem 0;') 328 million
       .tile
         .tile_content.vertical
           img.tile_img(alt='Eleventy logo' src='/assets/images/platforms/eleventy.png' style='filter: invert()')
@@ -271,7 +237,7 @@ h2 Services
         .tile_content.horizontal
           .tile_innercontent
             h3 Node.JS Applications
-            p Our team uses the widely popular Node.JS framework to build advanced web applications and custom integration middleware. Automate data exchange between your systems, stream data to the browser to connect users in immersive online game worlds and much more.
+            p Our team uses the widely popular Node.JS framework to build advanced web applications and custom integration middleware. Automate data exchange between systems, stream data to the browser to connect users in immersive online game worlds and much more.
           img.tile_img(alt='Node.js logo' src='/assets/images/platforms/nodejs.png')
         .tokens
           .token
@@ -288,7 +254,7 @@ h2 Services
           img.tile_img(alt='THREE.JS logo' src='/assets/images/platforms/threejs.png')
           .tile_innercontent
             h3 THREE.JS Experiences
-            p Give your website visitors an engaging 3D visualisation or interactive video game experience featuring your brand and products. Our team can create custom scenes and models unique to you and then use THREE.JS to ensure they look great on the web and on multiple devices.
+            p Give website visitors an engaging 3D visualisation or interactive video game experience. Our team can create custom scenes and models unique to you and then use THREE.JS to ensure they look great on the web and on multiple devices.
         .tokens
           .token
             h4 Contributors
