--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -3,48 +3,34 @@
         if ! isIframe
             .row
                 .narrow-column
-                    h3 About us
+                    h3 Worlds
                     ul(role="menu")
                         li(role="presentation")
-                            a(href='/about_us.html' role="menuitem") Meet the team
+                            a(href='/worlds.html' role="menuitem") Demonology
                         li(role="presentation")
-                            a(href='/about_us.html' role="menuitem") Tools of the trade
+                            a(href='/worlds.html' role="menuitem") Kamigen
                         li(role="presentation")
-                            a(href='/about_us.html' role="menuitem") Our values
-                        li(role="presentation")
-                            a(href='/blog.html' role="menuitem") Blog
+                            a(href='/worlds.html' role="menuitem") Langenium
                 .narrow-column
-                    h3 Services
+                    h3 The Studio
                     ul(role="menu")
                         li(role="presentation")
-                            a(href='/services.html' role="menuitem") 3D Modelling and Printing
+                            a(href='/the_studio.html' role="menuitem") Blog
                         li(role="presentation")
-                            a(href='/services.html' role="menuitem") Animation
+                            a(href='/the_studio.html' role="menuitem") Behind the scenes
                         li(role="presentation")
-                            a(href='/services.html' role="menuitem") Game Development
+                            a(href='/the_studio.html' role="menuitem") Guides
                         li(role="presentation")
-                            a(href='/services.html' role="menuitem") Graphic Design
+                            a(href='/the_studio.html' role="menuitem") Source Code
                         li(role="presentation")
-                            a(href='/services.html' role="menuitem") Interactive Design
-                        li(role="presentation")
-                            a(href='/services.html' role="menuitem") Marketing Design
-                        li(role="presentation")
-                            a(href='/services.html' role="menuitem") Product design
-                        li(role="presentation")
-                            a(href='/services.html' role="menuitem") Web design
-                        li(role="presentation")
-                            a(href='/services.html' role="menuitem") Web development
-                        li(role="presentation")
-                            a(href='/services.html' role="menuitem") Video production
+                            a(href='/the_studio.html' role="menuitem") Software
                 .narrow-column
-                    h3 Our work
+                    h3 What We Do
                     ul(role="menu")
                         li(role="presentation")
-                            a(href='/case_studies.html' role="menuitem") Case studies
+                            a(href='/what_we_do.html' role="menuitem") Research &amp; Development
                         li(role="presentation")
-                            a(href='/portfolio.html' role="menuitem") Portfolio
-                        li(role="presentation")
-                            a(href='/contact_us.html' role="menuitem") Contact Us
+                            a(href='/what_we_do.html' role="menuitem") Open Source
                 .narrow-column
                     h3 Terms
                     ul(role="menu")
