--- a/src/content/what_we_do.pug
+++ b/src/content/what_we_do.pug
@@ -1,7 +1,49 @@
 h2 What We Do
 .content
-  .row.center
-    .wide-column
-      p
-        | Open Studios has a wealth of tools, skills and unique knowledge. We founded this studio to make our project dreams into reality. When we work with others, we apply the same passion to other peoples ideas and make their dreams a reality too.
-  
+  .row
+    .tiles
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Research and Development
+            p We're building a future-focused studio that uses technology, creativity, and ethical thinking to make things better.
+            p Open Studios is all about project-driven R&D. We make new kinds of interactive media and experiences, and we share the process while we're doing it.
+            p Think of it as a digital open studio that is transparent, ongoing, and always evolving.
+            p When we figure stuff out, we write it up in guides that might help others too. Everything we make is open source, so anyone can take it, remix it, and build on it.
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Behind the scenes
+            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
+            p Recent highlights:
+            p
+              a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective') Langenium V6 Retrospective
+            p
+              a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024') Studio Roundup for May 2024
+            br
+            p.align_right
+              a(href='/blog.html' target='_blank' title='Read our blog') Read our blog
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Guides
+            p Interested in making something special? We may have what you need!
+            p
+              a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html'  target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)') How to implement Blender Principled BSDF Materials in Three.js (WebGL)
+            p
+              a(href='/blog/2023/10/building-a-cool-3d-website-tips-tricks-and-lessons-learned.html' target='_blank' title='Building A Cool 3D website: Tips, Tricks and Lessons Learned') Building A Cool 3D website: Tips, Tricks and Lessons Learned
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Open Source
+            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
+            p Recent highlights:
+            p
+              a(href='#') Kamigen
+            p
+              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium
+            p
+              a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
+            br
+            p.align_right
+              a(href='https://github.com/OpenStudiosCo/') Visit our Github
