--- a/src/styles/sections/content.styl
+++ b/src/styles/sections/content.styl
@@ -236,6 +236,10 @@
         object-fit cover
 
 
+.content .align_right {
+    text-align: right;
+}
+
 @media screen and (min-width: 768px) {
     .content .tiles {
         margin: 1rem -2rem;
