#79 - Adding The Studio WIP

--- a/src/content/the_studio.pug
+++ b/src/content/the_studio.pug
@@ -1,7 +1,85 @@
 h2 The Studio
 .content
-  .row.center
-    .wide-column
-      p
-        | Open Studios has a wealth of tools, skills and unique knowledge. We founded this studio to make our project dreams into reality. When we work with others, we apply the same passion to other peoples ideas and make their dreams a reality too.
-  
+  .row
+    .tiles
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Blog
+            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
+            p Recent highlights:
+            p
+              a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective') Langenium V6 Retrospective
+            p
+              a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024') Studio Roundup for May 2024
+            br
+            p.align_right
+              a(href='/blog.html' target='_blank' title='Read our blog') Read our blog
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Behind the scenes
+            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
+            p Recent highlights:
+            p
+              a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective') Langenium V6 Retrospective
+            p
+              a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024') Studio Roundup for May 2024
+            br
+            p.align_right
+              a(href='/blog.html' target='_blank' title='Read our blog') Read our blog
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Guides
+            p Interested in making something special? We may have what you need!
+            p
+              a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html'  target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)') How to implement Blender Principled BSDF Materials in Three.js (WebGL)
+            p
+              a(href='/blog/2023/10/building-a-cool-3d-website-tips-tricks-and-lessons-learned.html' target='_blank' title='Building A Cool 3D website: Tips, Tricks and Lessons Learned') Building A Cool 3D website: Tips, Tricks and Lessons Learned
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Source Code
+            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
+            p Recent highlights:
+            p
+              a(href='#') Kamigen
+            p
+              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium
+            p
+              a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
+            br
+            p.align_right
+              a(href='https://github.com/OpenStudiosCo/') Visit our Github
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Software
+            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
+            p Recent highlights:
+            p
+              a(href='#') Kamigen
+            p
+              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium
+            p
+              a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
+            br
+            p.align_right
+              a(href='https://github.com/OpenStudiosCo/') Visit our Github
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Support Us
+            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
+            p Recent highlights:
+            p
+              a(href='#') Kamigen
+            p
+              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium
+            p
+              a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
+            br
+            p.align_right
+              a(href='https://github.com/OpenStudiosCo/') Visit our Github
+
