--- a/src/content/what_we_do.pug
+++ b/src/content/what_we_do.pug
@@ -29,9 +29,11 @@ h2 What We Do
             h3 Guides
             p Interested in making something special? We may have what you need!
             p
-              a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html'  target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)') How to implement Blender Principled BSDF Materials in Three.js (WebGL)
+              a(href='/blog/2025/07/beginners-guide-to-self-hosted-applications.html' target='_blank' title='Beginners Guide to Self Hosted Applications') Beginners Guide to Self Hosted Applications
             p
               a(href='/blog/2023/10/building-a-cool-3d-website-tips-tricks-and-lessons-learned.html' target='_blank' title='Building A Cool 3D website: Tips, Tricks and Lessons Learned') Building A Cool 3D website: Tips, Tricks and Lessons Learned
+            p
+              a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html'  target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)') How to implement Blender Principled BSDF Materials in Three.js (WebGL)
       .tile
         .tile_content
           .tile_innercontent
@@ -39,9 +41,9 @@ h2 What We Do
             p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
             p Recent highlights:
             p
-              a(href='#') Kamigen
+              a(href='https://github.com/OpenStudiosCo/kamigen.com') Kamigen Comics
             p
-              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium
+              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium Game
             p
               a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
             br
