#79 - Studio Page content

--- a/src/content/the_studio.pug
+++ b/src/content/the_studio.pug
@@ -5,65 +5,31 @@ h2 The Studio
       .tile
         .tile_content
           .tile_innercontent
-            h3 Blog
-            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
-            p Recent highlights:
-            p
-              a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective') Langenium V6 Retrospective
-            p
-              a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024') Studio Roundup for May 2024
-            br
-            p.align_right
-              a(href='/blog.html' target='_blank' title='Read our blog') Read our blog
+            h3 Welcome to The Studio!
+            p You can use this page to get a behind the scenes look at our work, including access to our retrospectives, guides, source code and software links.
+            p We hope these resources help you along your journey whether you're a hobbyist, professional or studying.
       .tile
         .tile_content
           .tile_innercontent
-            h3 Behind the scenes
-            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
-            p Recent highlights:
-            p
-              a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective') Langenium V6 Retrospective
-            p
-              a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024') Studio Roundup for May 2024
-            br
-            p.align_right
-              a(href='/blog.html' target='_blank' title='Read our blog') Read our blog
+            include blocks/list_behind_the_scenes.pug
       .tile
         .tile_content
           .tile_innercontent
-            h3 Guides
-            p Interested in making something special? We may have what you need!
-            p
-              a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html'  target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)') How to implement Blender Principled BSDF Materials in Three.js (WebGL)
-            p
-              a(href='/blog/2023/10/building-a-cool-3d-website-tips-tricks-and-lessons-learned.html' target='_blank' title='Building A Cool 3D website: Tips, Tricks and Lessons Learned') Building A Cool 3D website: Tips, Tricks and Lessons Learned
+            include blocks/list_guides.pug
       .tile
         .tile_content
           .tile_innercontent
             h3 Source Code
-            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
-            p Recent highlights:
-            p
-              a(href='#') Kamigen
-            p
-              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium
-            p
-              a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
-            br
-            p.align_right
-              a(href='https://github.com/OpenStudiosCo/') Visit our Github
+            include blocks/list_github.pug
       .tile
         .tile_content
           .tile_innercontent
             h3 Software
-            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
-            p Recent highlights:
+            p We frequently develop our own software to execute specific production goals i.e. achieving niche visual styles.
             p
-              a(href='#') Kamigen
+              a(href='https://github.com/OpenStudiosCo/kettlefish') Kettlefish Static Website Builder
             p
-              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium
-            p
-              a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
+              a(href='https://github.com/OpenStudiosCo/manifold') Manifold 2D/3D Graphics Multi Tool
             br
             p.align_right
               a(href='https://github.com/OpenStudiosCo/') Visit our Github
@@ -71,15 +37,9 @@ h2 The Studio
         .tile_content
           .tile_innercontent
             h3 Support Us
-            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
-            p Recent highlights:
-            p
-              a(href='#') Kamigen
-            p
-              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium
-            p
-              a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
+            p Open Studios is an independent studio that needs your help to keep producing high quality work.
+            p We are committed to produce content without restrictive licenses and with an open approach that teaches others.
+            p If you like the sound of that, head over to our support page to see how you can get involved!
             br
             p.align_right
-              a(href='https://github.com/OpenStudiosCo/') Visit our Github
-
+              a(href='/support_us.html' target='_blank' title='Support Us') Support Us
