--- a/src/content/what_we_do.pug
+++ b/src/content/what_we_do.pug
@@ -13,39 +13,13 @@ h2 What We Do
       .tile
         .tile_content
           .tile_innercontent
-            h3 Behind the scenes
-            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
-            p Recent highlights:
-            p
-              a(href='/blog/2025/05/langenium-v6-retrospective.html' target='_blank' title='Langenium v6 Retrospective') Langenium V6 Retrospective
-            p
-              a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024') Studio Roundup for May 2024
-            br
-            p.align_right
-              a(href='/blog.html' target='_blank' title='Read our blog') Read our blog
+            include blocks/list_behind_the_scenes.pug
       .tile
         .tile_content
           .tile_innercontent
-            h3 Guides
-            p Interested in making something special? We may have what you need!
-            p
-              a(href='/blog/2025/07/beginners-guide-to-self-hosted-applications.html' target='_blank' title='Beginners Guide to Self Hosted Applications') Beginners Guide to Self Hosted Applications
-            p
-              a(href='/blog/2023/10/building-a-cool-3d-website-tips-tricks-and-lessons-learned.html' target='_blank' title='Building A Cool 3D website: Tips, Tricks and Lessons Learned') Building A Cool 3D website: Tips, Tricks and Lessons Learned
-            p
-              a(href='/blog/2024/09/how-to-implement-blender-principled-bsdf-materials-in-three-js-webgl.html'  target='_blank' title='How to implement Blender Principled BSDF Materials in Three.js (WebGL)') How to implement Blender Principled BSDF Materials in Three.js (WebGL)
+            include blocks/list_guides.pug
       .tile
         .tile_content
           .tile_innercontent
             h3 Open Source
-            p Take a step back through our blog to see behind the scenes updates on our projects including retrospectives and progress updates.
-            p Recent highlights:
-            p
-              a(href='https://github.com/OpenStudiosCo/kamigen.com') Kamigen Comics
-            p
-              a(href='https://github.com/OpenStudiosCo/Langenium') Langenium Game
-            p
-              a(href='https://github.com/OpenStudiosCo/openstudios.xyz') Open Studios Website
-            br
-            p.align_right
-              a(href='https://github.com/OpenStudiosCo/') Visit our Github
+            include blocks/list_github.pug
