--- a/src/content/support_us.pug
+++ b/src/content/support_us.pug
@@ -2,6 +2,83 @@ h2 Support Us
 .content
   .row.center
     .wide-column
-      p
-        | Open Studios has a wealth of tools, skills and unique knowledge. We founded this studio to make our project dreams into reality. When we work with others, we apply the same passion to other peoples ideas and make their dreams a reality too.
-  
+      h3 Our process
+      p.
+        We follow an iterative approach to project delivery, adapting as we go to ensure resources are prioritised according to our needs and budget.
+  .row.center
+    .cards
+      .card
+        img.card_image(src='/assets/images/process/project_definition.jpg' alt='A digitally altered photo of a hand drawing in a notepad with a pencil')
+        h4 Project Definition
+        p.
+          Using best practices to create a project plan that is robust and holds up in different scenarios, maximising budget efficiency and minimising risks.
+      .card
+        img.card_image(src='/assets/images/process/prototype_iteration.jpg' alt='A digitally altered photo of a man working with 3D design software')
+        h4 Prototype Iteration
+        p.
+          We follow a Minimum Viable Product (MVP) approach which allows us to be more efficient, collaborative and adaptive for challenges along the way.
+      .card
+        img.card_image(src='/assets/images/process/stakeholder_review.jpg' alt='A digitally altered photo of an online meeting with multiple people on camera')
+        h4 Stakeholder Review
+        p.
+          We ensure projects stay on track to successful completion by providing regular progress updates, check-ins and implementing notes and feedback.
+      .card
+        img.card_image(src='/assets/images/process/refinement.jpg' alt='A digitally altered photo of two people reviewing content on a laptop')
+        h4 Refinement
+        p.
+          As multiple cycles of iteration are completed, the functionality, usability and overall quality of the project matures until it's ready for launch.
+      .card
+        img.card_image(src='/assets/images/process/ongoing_support.jpg' alt='A digitally altered photo of a customer service representatives headset')
+        h4 Ongoing Support
+        p.
+          We are committed to our studio projects and to produce them openly. If you want to lodge a ticket you may do so on Github, or reach out on LinkedIn.
+  .row.center
+    .wide-column
+      h3 Tools of the trade
+      p.
+        We value an efficient workflow that allows us to keep our own overheads down. Our selection of work tools is based on years of industry experience and ensures we are able to deliver our vision. It's important to us to finish work on budget and to do so in a good timeframe and with options to further iterate and improve.
+  .row.center
+    .feature.wide
+      .feature_media
+        a(href='/assets/images/tools/affinity_designer.png' class='lightbox')
+          img(src='/assets/images/tools/affinity_designer.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of a web page being designed in Affinity Designer')
+      .feature_content
+        h4 Illustration and photo editing software
+        p
+          | Our team is most experienced with the Adobe and Affinity suites for producing designs, illustrations and editing photos. We can deliver graphics in all formats including SVG, TIFF and PDF. Assets produced in our creative tools are often for use in other projects such as website designs (pictured) or product photo editing. We can also collaborate with existing teams with online tools like Figma and Canva.
+  .row.center
+    .feature.wide
+      .feature_content
+        h4 3D Design and Rendering Software
+        p
+          | The cornerstone of our capability in 3D Modelling and Rendering, Blender allows our team to access sophisticated tools for producing models, materials and 3D images. We can create custom photo realistic 3D models of product designs, optimised game models and create animated sequences for video ads, storytelling and interactive applications.
+      .feature_media
+        a(href='/assets/images/tools/blender.png' class='lightbox')
+          img(src='/assets/images/tools/blender.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of Blender being used to create a 3D animation')
+  .row.center
+    .feature.wide
+      .feature_media
+        a(href='/assets/images/tools/davinci.png' class='lightbox')
+          img(src='/assets/images/tools/davinci.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of DaVinci Resolve being used to edit a video')
+      .feature_content
+        h4 Video Editing Software
+        p
+          | We currently use DaVinci Resolve for sequencing and editing videos, allowing us to make any final touches needed on top of raw footage produced by video cameras and 3D rendering software. Our team is experienced with making good use of the features in DaVinci Resolve to create professional videos with multiple video layers, special effects, text overlays, scene transitions and custom color grading.
+  .row.center
+    .feature.wide
+      .feature_content
+        h4 Development Operations
+        p
+          | Our on premises server hosts our development environments, some of which are custom and others defined in automation tools like Ansible and Docker. Using cloud services for hosting and Github for CI/CD, version control, issue tracking and project management allows our team to work with a broad range of teams around the world. We can work within another organisations coding standards and policies or provide our own recommendations, depending on the project needs.
+      .feature_media
+        a(href='/assets/images/tools/vscode.png' class='lightbox')
+          img(src='/assets/images/tools/vscode.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of VS Code')
+  .row.center
+    .feature.wide
+      .feature_media
+        a(href='/assets/images/tools/dropbox.png' class='lightbox')
+          img(src='/assets/images/tools/dropbox.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of the company Dropbox')
+      .feature_content
+        h4 Business Operations
+        p
+          | We have a robust documentation system that ensures nothing is lost. Using Office and Dropbox our organized and structured files keep our production team equipped and informed for maximum efficiency to meet project goals.
