#79 - Setting up support us page

--- a/src/content/support_us.pug
+++ b/src/content/support_us.pug
@@ -1,5 +1,29 @@
 h2 Support Us
 .content
+  .row
+    .tiles
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Contribute
+            p We need artists, coders, testers and much more. If you are interested in contributing to one of our projects, join us on one of the links below.
+            p
+              a(href='https://www.artstation.com/openstudios') Artstation
+            p
+              a(href='https://www.facebook.com/openstudiosco') Facebook
+            p
+              a(href='https://www.instagram.com/openstudiosco/') Facebook
+            p
+              a(href='https://github.com/OpenStudiosCo/Langenium') Github
+            p
+              a(href='https://www.linkedin.com/company/open-studios-australia/') LinkedIn
+      .tile
+        .tile_content
+          .tile_innercontent
+            h3 Digital Store (coming soon)
+            p 3D Models, game ready assets, and other tools you may need to produce your dream project.
+            p Professionally made by Open Studios.
+            p Watch this space!
   .row.center
     .wide-column
       h3 Our process
