--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -156,7 +156,7 @@ html(lang='en')
 
             script(type="importmap")
                 include importmap.json
-            script(src='/assets/scripts/L.js')
+            script(src='/assets/scripts/pokeL.js')
             script
                 include ../scripts/pokematrix.js
             script.
