#79 - Initial worlds content

--- a/src/content/worlds.pug
+++ b/src/content/worlds.pug
@@ -1,7 +1,27 @@
 h2 Worlds
 .content
   .row.center
-    .wide-column
-      p
-        | Open Studios has a wealth of tools, skills and unique knowledge. We founded this studio to make our project dreams into reality. When we work with others, we apply the same passion to other peoples ideas and make their dreams a reality too.
-  
+    .world
+      .world_content
+        h3 Demonology
+        p We embrace differences, cherishing the rich tapestry of backgrounds, experiences, and identities that each person brings. It is important to us that working relationships are not only productive but also built on a foundation of mutual respect and appreciation.
+  .row.center
+    .world
+      .world_content
+        h3 Kamigen
+        p We embrace differences, cherishing the rich tapestry of backgrounds, experiences, and identities that each person brings. It is important to us that working relationships are not only productive but also built on a foundation of mutual respect and appreciation.
+  .row.center
+    .world
+      .world_content
+        h3 Langenium
+        p We embrace differences, cherishing the rich tapestry of backgrounds, experiences, and identities that each person brings. It is important to us that working relationships are not only productive but also built on a foundation of mutual respect and appreciation.
+  .row
+    .tiles
+      .tile
+        .tile_content
+          .tile_innercontent
+            include blocks/list_behind_the_scenes.pug
+      .tile
+        .tile_content
+          .tile_innercontent
+            include blocks/tile_support_us.pug
