--- a/src/content/the_studio.pug
+++ b/src/content/the_studio.pug
@@ -36,10 +36,4 @@ h2 The Studio
       .tile
         .tile_content
           .tile_innercontent
-            h3 Support Us
-            p Open Studios is an independent studio that needs your help to keep producing high quality work.
-            p We are committed to produce content without restrictive licenses and with an open approach that teaches others.
-            p If you like the sound of that, head over to our support page to see how you can get involved!
-            br
-            p.align_right
-              a(href='/support_us.html' target='_blank' title='Support Us') Support Us
+            include blocks/tile_support_us.pug
