--- a/src/content/worlds.pug
+++ b/src/content/worlds.pug
@@ -4,17 +4,23 @@ h2 Worlds
     .world
       .world_content
         h3 Demonology
-        p We embrace differences, cherishing the rich tapestry of backgrounds, experiences, and identities that each person brings. It is important to us that working relationships are not only productive but also built on a foundation of mutual respect and appreciation.
+        p Demonology is an animated webseries that follows the adventures of two young demons living in the suburbs of hell.
+        p Still in pre-production, we can't wait to show you the hilarious, mysterious and awesome world of Demonology.
+        a(href='#' target='_blank' disabled) Coming soon!
   .row.center
     .world
       .world_content
         h3 Kamigen
-        p We embrace differences, cherishing the rich tapestry of backgrounds, experiences, and identities that each person brings. It is important to us that working relationships are not only productive but also built on a foundation of mutual respect and appreciation.
+        p Kamigen is a solarpunk webcomic featuring pre Colonial Filipino mythology. The story is told from multiple points of view.
+        p Hopeful, bright and a little bit cheesy - the world of Kamigen is heavily influenced by some of our favourite sci-fi worlds. 
+        a(href='https://kamigen.com/' target='_blank' disabled) Visit Kamigen
   .row.center
     .world
       .world_content
         h3 Langenium
-        p We embrace differences, cherishing the rich tapestry of backgrounds, experiences, and identities that each person brings. It is important to us that working relationships are not only productive but also built on a foundation of mutual respect and appreciation.
+        p Langenium is a sci-fi game you can play right in your browser. Fly through strange skies, dodge missiles, and uncover a mysterious sci-fi world.
+        p Fast, a little wild, and always evolving. Langenium is a place to explore, mess around, and lose yourself for a while.
+
   .row
     .tiles
       .tile
