--- a/src/styles/1999.styl
+++ b/src/styles/1999.styl
@@ -19,3 +19,4 @@
 @import "sections/menu.styl";
 @import "sections/blog_post.styl";
 @import "sections/wordpress_content.styl";
+@import "sections/worlds.styl";
