--- a/src/content/worlds.pug
+++ b/src/content/worlds.pug
@@ -1,26 +1,29 @@
 h2 Worlds
 .content
   .row.center
-    .world
+    .world.yellow(style='background-image: url("/assets/images/world-backgrounds/Demonology.jpg")')
       .world_content
-        h3 Demonology
+        h3
+          img(src='/assets/images/world-logos/Demonology.png' alt='Demonology')
         p Demonology is an animated webseries that follows the adventures of two young demons living in the suburbs of hell.
         p Still in pre-production, we can't wait to show you the hilarious, mysterious and awesome world of Demonology.
-        a(href='#' target='_blank' disabled) Coming soon!
+        a(disabled) Coming soon!
   .row.center
-    .world
+    .world.magenta(style='background-image: url("/assets/images/world-backgrounds/Kamigen.jpg")')
       .world_content
-        h3 Kamigen
+        h3
+          img(src='/assets/images/world-logos/Kamigen.png' alt='Kamigen')
         p Kamigen is a solarpunk webcomic featuring pre Colonial Filipino mythology. The story is told from multiple points of view.
         p Hopeful, bright and a little bit cheesy - the world of Kamigen is heavily influenced by some of our favourite sci-fi worlds. 
         a(href='https://kamigen.com/' target='_blank' disabled) Visit Kamigen
   .row.center
-    .world
+    .world.cyan(style='background-image: url("/assets/images/world-backgrounds/Langenium.jpg")')
       .world_content
-        h3 Langenium
+        h3
+          img(src='/assets/images/world-logos/Langenium.png' alt='Langenium')
         p Langenium is a sci-fi game you can play right in your browser. Fly through strange skies, dodge missiles, and uncover a mysterious sci-fi world.
         p Fast, a little wild, and always evolving. Langenium is a place to explore, mess around, and lose yourself for a while.
-
+        a(href='https://langenium.com/' target='_blank' disabled) Visit Langenium
   .row
     .tiles
       .tile
