--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -994,7 +994,6 @@ code .token.inserted {
 }
 .world {
   align-content: start;
-  background-size: cover;
   border-radius: 25px;
   border-style: solid;
   border-top-width: 1px;
@@ -1002,30 +1001,74 @@ code .token.inserted {
   border-left-width: 1px;
   border-right-width: 1px;
   display: flex;
+  margin: 1rem 0;
   width: 100%;
 }
 .world.yellow {
+  background: #777d26;
+  background-position: 100% 100%;
+  background-size: 160%;
+  background-repeat: no-repeat;
+  padding-bottom: 21rem;
+  background-image: url("/assets/images/world-backgrounds/Demonology.jpg");
   border-color: #ff0;
+}
+@media (min-width: 768px) {
+  .world.yellow {
+    background-size: cover;
+    background-position: center center;
+    padding-bottom: inherit;
+  }
 }
 .world.yellow a:hover:not([disabled]) {
   background: rgba(255,255,0,0.5);
   color: #000;
 }
 .world.magenta {
+  background: #7d2673;
+  background-position: 100% 100%;
+  background-size: 160%;
+  background-repeat: no-repeat;
+  padding-bottom: 21rem;
+  background-image: url("/assets/images/world-backgrounds/Kamigen.jpg");
   border-color: #f0f;
+}
+@media (min-width: 768px) {
+  .world.magenta {
+    background-size: cover;
+    background-position: center center;
+    padding-bottom: inherit;
+  }
 }
 .world.magenta a:hover {
   background: rgba(255,0,255,0.5);
   color: #fff;
 }
 .world.cyan {
+  background: #267a7d;
+  background-position: 100% 100%;
+  background-size: 160%;
+  background-repeat: no-repeat;
+  padding-bottom: 21rem;
+  background-image: url("/assets/images/world-backgrounds/Kamigen.jpg");
   border-color: #0ff;
+}
+@media (min-width: 768px) {
+  .world.cyan {
+    background-size: cover;
+    background-position: center center;
+    padding-bottom: inherit;
+  }
 }
 .world.cyan a:hover {
   background: rgba(0,255,255,0.5);
   color: #000;
 }
-.world a {
+.world .world_content {
+  padding: 2rem 3rem;
+  text-align: left;
+}
+.world .world_content a {
   background: rgba(250,250,250,0.5);
   border: solid 1px #ccc;
   border-radius: 10px;
@@ -1036,11 +1079,15 @@ code .token.inserted {
   font-size: 1.5rem;
   text-decoration: none;
 }
-.world a:hover[disabled] {
+.world .world_content a:hover[disabled] {
   color: #fff !important;
 }
-.world .world_content {
-  padding: 2rem 3rem;
-  text-align: left;
-  width: 50%;
+.world .world_content h3 img {
+  max-width: 80%;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .world .world_content {
+    width: 50%;
+  }
 }
