--- a/src/content/worlds.pug
+++ b/src/content/worlds.pug
@@ -1,7 +1,7 @@
 h2 Worlds
 .content
   .row.center
-    .world.yellow(style='background-image: url("/assets/images/world-backgrounds/Demonology.jpg")')
+    .world.yellow
       .world_content
         h3
           img(src='/assets/images/world-logos/Demonology.png' alt='Demonology')
@@ -9,7 +9,7 @@ h2 Worlds
         p Still in pre-production, we can't wait to show you the hilarious, mysterious and awesome world of Demonology.
         a(disabled) Coming soon!
   .row.center
-    .world.magenta(style='background-image: url("/assets/images/world-backgrounds/Kamigen.jpg")')
+    .world.magenta
       .world_content
         h3
           img(src='/assets/images/world-logos/Kamigen.png' alt='Kamigen')
