--- a/src/styles/sections/worlds.styl
+++ b/src/styles/sections/worlds.styl
@@ -1,8 +1,21 @@
 // Worlds cards
 
+world-background(image_url)
+    background-position 100% 100%
+    background-size 160%
+    background-repeat no-repeat
+    padding-bottom 21rem
+
+    background-image url( image_url )
+
+    @media (min-width: 768px)
+        background-size cover
+        background-position center center
+        padding-bottom inherit
+
 .world
     align-content start
-    background-size cover
+    
     border-radius 25px
     border-style solid
     border-top-width 1px
@@ -10,41 +23,57 @@
     border-left-width 1px
     border-right-width 1px
     display flex
+    margin 1rem 0
     width 100%
 
     &.yellow
+        background #777d26ff
+        world-background("/assets/images/world-backgrounds/Demonology.jpg")
         border-color yellow
         a:hover:not([disabled])
             background rgba(255, 255, 0, 0.5)
             color black
 
     &.magenta
+        background #7d2673ff
+        world-background("/assets/images/world-backgrounds/Kamigen.jpg")
         border-color magenta
         a:hover
             background rgba(255, 0, 255, 0.5)
             color white
 
     &.cyan
+        background #267a7dff
+        
+        world-background( "/assets/images/world-backgrounds/Kamigen.jpg" )
         border-color cyan
         a:hover
             background rgba(0, 255, 255, 0.5)
-            color black
-
-    a
-        background rgba(250, 250, 250, 0.5)
-        border solid 1px #CCCCCC
-        border-radius 10px
-        color white
-        display inline-block
-        margin 1rem 0 0.5rem 0
-        padding 0.5rem 1rem
-        font-size 1.5rem
-        text-decoration none
-
-        &:hover[disabled]
-            color white !important
+            color black   
 
     .world_content
         padding 2rem 3rem
         text-align left
-        width 50%
+
+        a
+            background rgba(250, 250, 250, 0.5)
+            border solid 1px #CCCCCC
+            border-radius 10px
+            color white
+            display inline-block
+            margin 1rem 0 0.5rem 0
+            padding 0.5rem 1rem
+            font-size 1.5rem
+            text-decoration none
+
+            &:hover[disabled]
+                color white !important
+
+        h3 img
+            max-width 80%
+            margin 0 auto
+
+
+    @media (min-width: 768px)
+        .world_content
+            width 50%
