#79 - Tweaks to page content

--- a/src/content/worlds.pug
+++ b/src/content/worlds.pug
@@ -1,6 +1,12 @@
 h2 Worlds
 .content
   .row.center
+    .wide-column
+      p
+        | Enter the worlds of Open Studios - unique places full of heart, story and humour.
+      p
+        | Whether you're in the mood to read, watch or play - there's something here for you.
+  .row.center
     .world.yellow
       .world_content
         h3
