#79 - Removing Google deps - Tweaking 404 content to cope with old core pages dropping - Adding worlds screenshot texture

--- a/src/content/404.pug
+++ b/src/content/404.pug
@@ -4,7 +4,7 @@ h2 Page not found
     .wide-column
       br
       br
-      p Sorry but the page you are looking for wasn't found here.
+      p Sorry mate but the page you are looking for has moved, or perhaps never existed at all...
       br
       br
       br
